test_suite/tests/errors/unknown_transition_target.stderr
error: Unknown state transition `nowhere`. Declare the state or fix the name
 --> tests/errors/unknown_transition_target.rs:6:23
  |
6 |             go? { => @nowhere; }
  |                       ^^^^^^^
